<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lineCenterVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSymbol"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lineCenterVertical"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/symbol"
        android:textColor="@color/_3E3E3E"
        android:textStyle="bold"
        android:textSize="@dimen/_16sp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSymbolDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewSymbol"
        app:layout_constraintTop_toBottomOf="@+id/textViewSymbol"
        android:textColor="@color/_6B6B6B"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewBaseCurrencyShortName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lineCenterVertical"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/basecurrencyshortname"
        android:textColor="@color/_3E3E3E"
        android:textStyle="bold"
        android:textSize="@dimen/_16sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewBaseCurrencyShortNameData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/_6B6B6B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewBaseCurrencyShortName"
        app:layout_constraintTop_toBottomOf="@+id/textViewBaseCurrencyShortName"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewQuoteCurrencyShortName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lineCenterVertical"
        app:layout_constraintTop_toBottomOf="@id/textViewSymbolDate"
        android:text="@string/quotecurrencyshortname"
        android:textColor="@color/_3E3E3E"
        android:textStyle="bold"
        android:textSize="@dimen/_16sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewQuoteCurrencyShortNameData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/_6B6B6B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewQuoteCurrencyShortName"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuoteCurrencyShortName"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewQuantityIncrement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lineCenterVertical"
        app:layout_constraintTop_toBottomOf="@id/textViewBaseCurrencyShortNameData"
        android:text="@string/quantityincrement"
        android:textColor="@color/_3E3E3E"
        android:textStyle="bold"
        android:textSize="@dimen/_16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewQuantityIncrementData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/_6B6B6B"
        app:layout_constraintEnd_toEndOf="@+id/textViewQuantityIncrement"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuantityIncrement"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTickSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lineCenterVertical"
        app:layout_constraintTop_toBottomOf="@id/textViewQuantityIncrementData"
        android:text="@string/ticksize"
        android:textColor="@color/_3E3E3E"
        android:textStyle="bold"
        android:textSize="@dimen/_16sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTickSizeData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/_6B6B6B"
        app:layout_constraintStart_toStartOf="@+id/textViewTickSize"
        app:layout_constraintTop_toBottomOf="@+id/textViewTickSize" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTakeLiquidityRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lineCenterVertical"
        app:layout_constraintTop_toBottomOf="@id/textViewQuantityIncrementData"
        android:text="@string/takeliquidityrate"
        android:textColor="@color/_3E3E3E"
        android:textStyle="bold"
        android:textSize="@dimen/_16sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTakeLiquidityRateData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/_6B6B6B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewTakeLiquidityRate"
        app:layout_constraintTop_toBottomOf="@+id/textViewTakeLiquidityRate"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewProvideLiquidityRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lineCenterVertical"
        app:layout_constraintTop_toBottomOf="@id/textViewTickSizeData"
        android:text="@string/provideliquidityrate"
        android:textColor="@color/_3E3E3E"
        android:textStyle="bold"
        android:textSize="@dimen/_16sp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewProvideLiquidityRateData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/_6B6B6B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewProvideLiquidityRate"
        app:layout_constraintTop_toBottomOf="@+id/textViewProvideLiquidityRate" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/_0D8DBF"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewProvideLiquidityRateData"/>
</androidx.constraintlayout.widget.ConstraintLayout>